objects/Implementation_Issues__c.object
<CustomObject>
    <fields>
        <fullName>Account_Demo__c</fullName>
        <formula>Implementation_Tracking_ID__r.Account_Demo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>IF( ISBLANK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Account_Legal_Name__r.Id, Implementation_Tracking_ID__r.Account_Legal_Name__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_Multiple_Areas_Impacted__c</fullName>
        <label>Are Multiple Areas Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Area__c</fullName>
        <label>Assigned Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DIT</fullName>
                </value>
                <value>
                    <fullName>Group Services</fullName>
                </value>
                <value>
                    <fullName>ID Cards</fullName>
                </value>
                <value>
                    <fullName>Implementations</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                    <isActive>false</isActive>
                    <label>Clinical</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Implementer__c</fullName>
        <formula>Implementation_Tracking_ID__r.Assigned_Implementer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Implementer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Stop_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim Stop End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Stop_Request_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim Stop Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Stop_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim Stop Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_Stop__c</fullName>
        <label>Claim Stop</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Implementation_Tracking_ID__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Issue_Opened__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Issue Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Of_Issue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description Of Issue</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fix_CQ_Or_SSCR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fix CQ Or SSCR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>IF( ISBLANK(Implementation_Tracking_ID__r.Group_Number__r.Id), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Group_Number__r.Id, Implementation_Tracking_ID__r.Group_Number__r.Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Clinical_Issue_Analyst_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>If Clinical Issue, Analyst Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Issues4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_Clinical_Issue_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Clinical Issue, Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Clinical_Issue_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Clinical Issue, Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_Clinical_Issue_Issue_Status__c</fullName>
        <label>If Clinical Issue, Issue Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active - Green</fullName>
                </value>
                <value>
                    <fullName>Active - Yellow</fullName>
                </value>
                <value>
                    <fullName>Active - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled/Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Clinical_Issue_Manager_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>If Clinical Issue, Manager Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Issues7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_Clinical_Issue_Resolution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Clinical Issue, Resolution</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Clinical_Issue_Work_Impacted__c</fullName>
        <label>If Clinical Issue, Work Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>HPCC Code</fullName>
                </value>
                <value>
                    <fullName>Program Set Up</fullName>
                </value>
                <value>
                    <fullName>Transition/Continuation of Care Files</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_DIT_Issue_Analyst_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>If DIT Issue, Analyst Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_DIT_Issue_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If DIT Issue, Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_DIT_Issue_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If DIT Issue, Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_DIT_Issue_DIT_Issue_Status__c</fullName>
        <label>If DIT Issue, DIT Issue Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_Post_Implementation_Issue_Applicable__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active - Green</fullName>
                </value>
                <value>
                    <fullName>Active - Yellow</fullName>
                </value>
                <value>
                    <fullName>Active - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Hold Run Out</fullName>
                </value>
                <value>
                    <fullName>Hold 90 Day File</fullName>
                </value>
                <value>
                    <fullName>No Work Needed</fullName>
                </value>
                <value>
                    <fullName>Post Production Checkout</fullName>
                </value>
                <value>
                    <fullName>Worked On Another UWR</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_DIT_Issue_DIT_Work_Effort_Impacted__c</fullName>
        <label>If DIT Issue, DIT Work Effort Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Is_Post_Implementation_Issue_Applicable__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commingle - History Conv</fullName>
                </value>
                <value>
                    <fullName>Commingle &amp; Rx Elig</fullName>
                </value>
                <value>
                    <fullName>Commingle, Rx Elig &amp; HC</fullName>
                </value>
                <value>
                    <fullName>Commingle/Elig</fullName>
                </value>
                <value>
                    <fullName>Data Warehouse</fullName>
                </value>
                <value>
                    <fullName>Dental Commingle</fullName>
                </value>
                <value>
                    <fullName>EAV Commingle</fullName>
                </value>
                <value>
                    <fullName>FSA</fullName>
                </value>
                <value>
                    <fullName>Full Term Account</fullName>
                </value>
                <value>
                    <fullName>HEQ Claims Feed</fullName>
                </value>
                <value>
                    <fullName>HEQ Elig-Claims Feed</fullName>
                </value>
                <value>
                    <fullName>HEQ Eligibility Feed</fullName>
                </value>
                <value>
                    <fullName>HEQ New</fullName>
                </value>
                <value>
                    <fullName>HEQ Renewal</fullName>
                </value>
                <value>
                    <fullName>HEQ Term</fullName>
                </value>
                <value>
                    <fullName>History Conv Init</fullName>
                </value>
                <value>
                    <fullName>History Conv Sub</fullName>
                </value>
                <value>
                    <fullName>HRA Transfers</fullName>
                </value>
                <value>
                    <fullName>Inbound Incentive File</fullName>
                </value>
                <value>
                    <fullName>Inhouse Commingle</fullName>
                </value>
                <value>
                    <fullName>Internal Accum Hist Conv</fullName>
                </value>
                <value>
                    <fullName>JAA - Commingle</fullName>
                </value>
                <value>
                    <fullName>JAA - Contact Information</fullName>
                </value>
                <value>
                    <fullName>JAA - CSR Tracking</fullName>
                </value>
                <value>
                    <fullName>JAA - Eligibility Feed</fullName>
                </value>
                <value>
                    <fullName>JAA - FlexLink User Group</fullName>
                </value>
                <value>
                    <fullName>JAA - Implementation</fullName>
                </value>
                <value>
                    <fullName>JAA - ITS B2 Releases</fullName>
                </value>
                <value>
                    <fullName>JAA - Other Projects</fullName>
                </value>
                <value>
                    <fullName>JAA - Post Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_DIT_Issue_DIT_Work_Impacted__c</fullName>
        <label>If DIT Issue, DIT Work Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3-Way Commingle</fullName>
                </value>
                <value>
                    <fullName>Commingle - History Conv</fullName>
                </value>
                <value>
                    <fullName>Commingle &amp; Rx Elig</fullName>
                </value>
                <value>
                    <fullName>Commingle, Rx Elig &amp; HC</fullName>
                </value>
                <value>
                    <fullName>Commingle/Elig</fullName>
                </value>
                <value>
                    <fullName>Data Warehouse</fullName>
                </value>
                <value>
                    <fullName>Dental Commingle</fullName>
                </value>
                <value>
                    <fullName>EAV Commingle</fullName>
                </value>
                <value>
                    <fullName>FSA</fullName>
                </value>
                <value>
                    <fullName>Full Term Account</fullName>
                </value>
                <value>
                    <fullName>HEQ Claims Feed</fullName>
                </value>
                <value>
                    <fullName>HEQ Elig-Claims Feed</fullName>
                </value>
                <value>
                    <fullName>HEQ Eligibility Feed</fullName>
                </value>
                <value>
                    <fullName>HEQ New</fullName>
                </value>
                <value>
                    <fullName>HEQ Renewal</fullName>
                </value>
                <value>
                    <fullName>HEQ Term</fullName>
                </value>
                <value>
                    <fullName>History Conv Init</fullName>
                </value>
                <value>
                    <fullName>History Conv Sub</fullName>
                </value>
                <value>
                    <fullName>HRA Transfers</fullName>
                </value>
                <value>
                    <fullName>Inbound Incentive File</fullName>
                </value>
                <value>
                    <fullName>Inhouse Commingle</fullName>
                </value>
                <value>
                    <fullName>Internal Accum Hist Conv</fullName>
                </value>
                <value>
                    <fullName>JAA - Commingle</fullName>
                </value>
                <value>
                    <fullName>JAA - Contact Information</fullName>
                </value>
                <value>
                    <fullName>JAA - CSR Tracking</fullName>
                </value>
                <value>
                    <fullName>JAA - Eligibility Feed</fullName>
                </value>
                <value>
                    <fullName>JAA - FlexLink User Group</fullName>
                </value>
                <value>
                    <fullName>JAA - Implementation</fullName>
                </value>
                <value>
                    <fullName>JAA - ITS B2 Releases</fullName>
                </value>
                <value>
                    <fullName>JAA - Other Projects</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_DIT_Issue_Manager_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>If DIT Issue, Manager Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Issues8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_DIT_Issue_Resolution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If DIT Issue, Resolution</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Group_Service_Issue_Analyst_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>If Group Service Issue, Analyst Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Issues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_Group_Service_Issue_Comments2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Group Service Issue, Comments</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Group_Service_Issue_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Group Service Issue, Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Group_Service_Issue_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Group Service Issue, Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_Group_Service_Issue_Issue_Status__c</fullName>
        <label>If Group Service Issue, Issue Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active Yellow - Workaround/Solution Available</fullName>
                </value>
                <value>
                    <fullName>Active Red - No Workaround</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Group_Service_Issue_Manager_Name2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>If Group Service Issue, Manager Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Issues9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_Group_Service_Issue_Manager_Name__c</fullName>
        <label>If Group Service Issue, Manager Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Christine Maniscalchi</fullName>
                </value>
                <value>
                    <fullName>Carla Foust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Group_Service_Issue_Resolution2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Group Service Issue, Resolution</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Group_Service_Issue_Resolution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Group Service Issue, Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Group_Service_Issue_Work_Impacted__c</fullName>
        <label>If Group Service Issue, Work Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EET File</fullName>
                </value>
                <value>
                    <fullName>Group Load</fullName>
                </value>
                <value>
                    <fullName>Vendor Screen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_ID_Card_Issue_Analyst_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>If ID Card Issue, Analyst Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Issues2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_ID_Card_Issue_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If ID Card Issue, Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_ID_Card_Issue_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If ID Card Issue, Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_ID_Card_Issue_Issue_Status__c</fullName>
        <label>If ID Card Issue, Issue Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active - Green</fullName>
                </value>
                <value>
                    <fullName>Active - Yellow</fullName>
                </value>
                <value>
                    <fullName>Active - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled/Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_ID_Card_Issue_Manager_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>If ID Card Issue, Manager Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Issues6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>If_ID_Card_Issue_Resolution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If ID Card Issue, Resolution</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_ID_Card_Issue_Work_Impacted__c</fullName>
        <label>If ID Card Issue, Work Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ID Card Requirements</fullName>
                </value>
                <value>
                    <fullName>Creation of Mock Ups</fullName>
                </value>
                <value>
                    <fullName>Creation of Production Cards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Implementation_Issue_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Implementation Issue, Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Implementation_Issue_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Implementation Issue, Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_Implementation_Issue_Issue_Status__c</fullName>
        <label>If Implementation Issue, Issue Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active - Green</fullName>
                </value>
                <value>
                    <fullName>Active - Yellow</fullName>
                </value>
                <value>
                    <fullName>Active - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled/Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Implementation_Issue_Resolution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Implementation Issue, Resolution</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Implementation_Issue_Work_Impacted__c</fullName>
        <label>If Implementation Issue, Work Impacted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advantage Network</fullName>
                </value>
                <value>
                    <fullName>Benefit Coding</fullName>
                </value>
                <value>
                    <fullName>Benefit Set Up</fullName>
                </value>
                <value>
                    <fullName>Benefit Testing</fullName>
                </value>
                <value>
                    <fullName>Billing Set Up</fullName>
                </value>
                <value>
                    <fullName>CDH Set Up</fullName>
                </value>
                <value>
                    <fullName>Claims Processing</fullName>
                </value>
                <value>
                    <fullName>Claims Routing</fullName>
                </value>
                <value>
                    <fullName>Client Reporting</fullName>
                </value>
                <value>
                    <fullName>COB</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Data Exchange Team File Set Up</fullName>
                </value>
                <value>
                    <fullName>Day 2 Benefit Change Needed</fullName>
                </value>
                <value>
                    <fullName>EOBs</fullName>
                </value>
                <value>
                    <fullName>Employer Portal</fullName>
                </value>
                <value>
                    <fullName>Group Set Up</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>Member Portal</fullName>
                </value>
                <value>
                    <fullName>Phone Line Scripting</fullName>
                </value>
                <value>
                    <fullName>Profile Set Up</fullName>
                </value>
                <value>
                    <fullName>Program Set Up/Documentation</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                </value>
                <value>
                    <fullName>RMB Set Up</fullName>
                </value>
                <value>
                    <fullName>Single Sign On</fullName>
                </value>
                <value>
                    <fullName>SSCR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Jeopardizing_Production_Date_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Jeopardizing Production Date, Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Member_Impact_Impact_Description2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Member Impact, Impact Description</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Member_Impact_Impact_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If Member Impact, Impact Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Member_Impact_Of_Members_Impacted__c</fullName>
        <label>If Member Impact, # Of Members Impacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_Type__c</fullName>
        <label>Impact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Client and Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>IF( ISBLANK(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Id), &apos;&apos;, HYPERLINK(Implementation_Tracking_ID__r.Implementation_Record_ID__r.Id, Implementation_Tracking_ID__r.Implementation_Record_ID__r.Implementation_Case_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Manager_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Manager Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementation_Issues5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Phase__c</fullName>
        <label>Implementation Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Implementation (ie. RFP or Pre-Work)</fullName>
                </value>
                <value>
                    <fullName>Implementation (Approved and Prior to Go Live)</fullName>
                </value>
                <value>
                    <fullName>Post Implementation (Post Go Live)</fullName>
                </value>
                <value>
                    <fullName>Implementation Carried Into Post Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Record_ID__c</fullName>
        <formula>HYPERLINK(    Implementation_Tracking_ID__r.Implementation_Record_ID__c  , Implementation_Tracking_ID__r.Implementation_Record_ID__r.OrderNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipLabel>Implementation Issues</relationshipLabel>
        <relationshipName>Implementation_Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Issue_Jeopardizing_Production_Date__c</fullName>
        <label>Is Issue Jeopardizing Production Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>